[package]
name = "simple_jwt"
version = "0.1.0"
authors = ["anton_misa <anton_misa@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "3.1.0"
actix-rt = "1.1.1"
derive_more = "0.99.11"
openssl = "0.10.30"
data-encoding = "2.3.0"
toml = "0.5.7"